--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games Shop - Sua loja de games</title>
+    <title>Toca Som - instrumentos musicais</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Solitreo&display=swap"
       rel="stylesheet">
-    rel="stylesheet">
   </head>
 
   <body>
@@ -97,7 +96,7 @@
     <footer>
       <div class="container">
         <p>
-          &copy; Game Shop - Todos os direitos reservados - 2023
+          &copy; Toca Som - Todos os direitos reservados - 2023
         </p>
       </div>
     </footer>
