--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <h1>Toca Som</h1>
         <nav>
           <ul>
+            <li><a href="./pianos.html">Pianos</a></li>
+            <li><a href="outros_instrumetos">Outros Instrumentos</a></li>
             <li><a href="#about">Sobre a loja</a></li>
             <li><a href="#contact">Contato</a></li>
           </ul>
