--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
           <ul>
             <li><a href="./pianos.html">Pianos</a></li>
-            <li><a href="outros_instrumetos">Outros Instrumentos</a></li>
+            <li><a href="./outrosInstrumetos.html">Outros Instrumentos</a></li>
             <li><a href="#about">Sobre a loja</a></li>
             <li><a href="#contact">Contato</a></li>
           </ul>
