--- a/pianos.html
+++ b/pianos.html
@@ -19,14 +19,114 @@
         <h1>Toca Som</h1>
         <nav>
           <ul>
-            <li><a href="./pianos.html">Pianos</a></li>
-            <li><a href="outros_instrumetos">Outros Instrumentos</a></li>
-            <li><a href="#about">Sobre a loja</a></li>
-            <li><a href="#contact">Contato</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./outrosInstrumetos.html">Outros Instrumentos</a></li>
+
           </ul>
         </nav>
       </div>
     </header>
+    <section id="about">
+      <div class="container">
+        <img class="store-front" src="./images/piano_de_cauda.jpg" alt="Fachada loja da loja Games">
+        <div>
+          <h2>Piano de calda</h2>
+          <p>Um piano de cauda é um tipo de instrumento musical que consiste em teclas, cordas, martelos e mecanismo de
+            acionamento
+            que produz som quando as teclas são pressionadas. Ele é chamado de "piano de cauda" devido à sua forma
+            distinta, com uma
+            estrutura alongada na parte traseira, o "cauda". Esta estrutura adiciona mais comprimento às cordas, o que
+            resulta em um
+            som mais potente e rico em harmônicos. Pianos de cauda são geralmente maiores e mais pesados que pianos
+            verticais ou
+            digitais e são comumente utilizados em apresentações ao vivo e gravações musicais.</p>
+        </div>
+      </div>
+    </section>
+    <br>
+    <section id="about">
+      <div class="container">
+        <img class="store-front" src="./images/piano_vertical.jpg" alt="Fachada loja da loja Games">
+        <div>
+          <h2>Piano vertical</h2>
+          <p>Um piano vertical é um tipo de piano com teclas, cordas, martelos e mecanismo de acionamento que produz
+            som quando as
+            teclas são pressionadas. Em vez de ter uma forma alongada como os pianos de cauda, eles são projetados com
+            as cordas
+            posicionadas verticalmente. Isso permite que os pianos verticais sejam menores e mais compactos do que os
+            pianos de
+            cauda, tornando-os mais apropriados para espaços limitados. Eles são comumente encontrados em residências
+            e escolas, e
+            são uma boa opção para prática e aprendizado de música. Alguns modelos de piano vertical também vêm com
+            recursos
+            adicionais, como o som e teclas sensíveis ao toque que imitam a sensação de tocar um piano de cauda.</p>
+        </div>
+      </div>
+    </section>
+    <br>
+    <section id="about">
+      <div class="container">
+        <img class="store-front" src="./images/piano_digital.jpg" alt="Fachada loja da loja Games">
+        <div>
+          <h2>Piano digital</h2>
+          <p>Um piano digital é um instrumento musical que produz som através de tecnologia eletrônica ao invés de
+            cordas e martelos.
+            Ele geralmente tem teclas sensíveis ao toque que imitam a sensação de tocar um piano de cauda ou
+            vertical. Os pianos
+            digitais geralmente vêm com uma ampla variedade de sons e recursos adicionais, como a possibilidade de
+            mudar o timbre e
+            volume, adicionar efeitos, gravar sua performance, e tocar junto com músicas pré-gravadas. Eles são
+            geralmente mais
+            leves e menores do que os pianos tradicionais, e não requerem afinação ou manutenção. Alguns modelos
+            ainda permitem a
+            conexão com outros dispositivos, como computadores e tablets, tornando-os uma opção versátil para
+            músicos e entusiastas
+            da música.</p>
+        </div>
+      </div>
+      <br>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h2>Contato</h2>
+        <div class="contact-methods">
+          <div>
+            Nos acompanhe
+            </h3>
+            <ul class="social-links">
+              <li>
+                <a href="#" title="Siganos no instagram">
+                  <img src="./images/instagram.png" alt="Logo do Instagran">
+                </a>
+              </li>
+              <li>
+                <a href="#" title="Siganos no Facebook">
+                  <img src="./images/facebook.png" alt="Logo do Facebook">
+                </a>
+              </li>
+              <li>
+                <a href="#" title="Siganos no Youtube">
+                  <img src="./images/youtube.png" alt="Logo do Youtube">
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>
+              Venha ate nos
+            </h3>
+            <p>Rua Nona Sinfonia n 125, Vila Ré Menor - Sao Paulo - SP</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>
+          &copy; Toca Som - Todos os direitos reservados - 2023
+        </p>
+      </div>
+    </footer>
   </body>
 
 </html>
