--- a/outrosInstrumetos.html
+++ b/outrosInstrumetos.html
@@ -109,21 +109,22 @@
           <h2>Contato</h2>
           <div class="contact-methods">
             <div>
-              Nos acompanhe
+              <h3>
+                Nos acompanhe
               </h3>
               <ul class="social-links">
                 <li>
-                  <a href="#" title="Siganos no instagram">
+                  <a href="https://www.instagram.com/" title="Siganos no instagram">
                     <img src="./images/instagram.png" alt="Logo do Instagran">
                   </a>
                 </li>
                 <li>
-                  <a href="#" title="Siganos no Facebook">
+                  <a href="https://www.facebook.com" title="Siganos no Facebook">
                     <img src="./images/facebook.png" alt="Logo do Facebook">
                   </a>
                 </li>
                 <li>
-                  <a href="#" title="Siganos no Youtube">
+                  <a href="https://www.youtube.com/" title="Siganos no Youtube">
                     <img src="./images/youtube.png" alt="Logo do Youtube">
                   </a>
                 </li>
@@ -136,7 +137,6 @@
               <p>Rua Nona Sinfonia n 125, Vila Ré Menor - Sao Paulo - SP</p>
             </div>
           </div>
-        </div>
       </section>
       <footer>
         <div class="container">
